--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.password= 12345
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.SQLServerDialect
 spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
